Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjBoolean.quorum
Boolean bool = cast(Boolean, true)
boolean x = bool:GetValue()
output x