Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjUndefined.quorum
Boolean x = undefined
Boolean bool = cast(Boolean, x)